// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button snapshot 1`] = `
.c0 {
  line-height: 0.9;
  font-size: 5rem;
  font-family: 'Roboto Condensed',sans-serif;
  font-weight: 400;
  color: inherit;
  text-transform: uppercase;
}

@media (min-width:768px) {

}

<div>
  <span
    class="c0"
  >
    test
  </span>
</div>
`;

exports[`button snapshot 2`] = `
.c0 {
  line-height: 0.9;
  font-size: 5rem;
  font-family: 'Roboto Condensed',sans-serif;
  font-weight: 400;
  color: inherit;
  text-transform: uppercase;
}

@media (min-width:768px) {

}

@media (min-width:768px) {
  .c0 {
    font-size: 10rem;
  }
}

<div>
  <span
    class="c0"
  >
    test
  </span>
</div>
`;

exports[`button snapshot 3`] = `
.c0 {
  line-height: 0.9;
  font-size: 5rem;
  font-family: 'Roboto Condensed',sans-serif;
  font-weight: 400;
  color: var(--red);
  text-transform: uppercase;
}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

<div>
  <span
    class="c0"
  >
    test
  </span>
</div>
`;

exports[`button snapshot 4`] = `
.c0 {
  line-height: 0.9;
  font-size: 5rem;
  font-family: 'Roboto Condensed',sans-serif;
  font-weight: 400;
  text-shadow: 1px 2px 0px rgba(0,0,0,.8);
  color: var(--red);
  text-transform: uppercase;
}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

<div>
  <span
    class="c0"
  >
    test
  </span>
</div>
`;
